final with analysis

--- a/Pymaceuticals/pymaceuticals_starter-final with analysis.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter-final with analysis.ipynb
@@ -8,6 +8,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Capomulin is a front runner along with Ramicane as the two drug regimens share similar results with reducing tumor volume.\n",
+    "#This is evidenced in their similar means, medians, variances, std dev and SEM for the tumor volume as a result of the drug\n",
+    "#regimen.  Meanwhile, Infubinol, and Ceftamin do not share similar results in reducing tumor volume.\n",
+    "\n",
+    "#While Capomulin has a slightly higher median tumor volume relative to Ramicane, it has less variability as\n",
+    "#visualized in the boxplot. \n",
+    "\n",
+    "#Finally, the higher subject weight lessens the effectiveness of Capomulin in reducing the tumor volume.  This is proven by\n",
+    "#a r-value of .84.  The scatter plot below details the mouse's weight and resulting tumor volume from Capomulin drug regimen.\n",
+    "\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
